Working icon. Business registration fields. Support for long Queries.

--- a/MobileApp/MobileApp/Views/CreateQuery/CreateFoodQuery.xaml
+++ b/MobileApp/MobileApp/Views/CreateQuery/CreateFoodQuery.xaml
@@ -9,10 +9,14 @@
             <Label TextColor="Black" FontAttributes="Bold" Text="What do you want to eat?" FlexLayout.AlignSelf="Center" FontSize="20"/>
             <Entry x:Name="queryName" ReturnType="Next" FontSize="Medium" FlexLayout.AlignSelf="Stretch"  HorizontalOptions="CenterAndExpand"  TextColor="Black" />
             <Label TextColor="Black" FontAttributes="Bold" Text="Do you need this to be delivered to you?" FlexLayout.AlignSelf="Center" FontSize="20"/>
-            <StackLayout Orientation="Horizontal" FlexLayout.AlignSelf="Stretch">
-                <CheckBox x:Name="queryDelivery" FlexLayout.AlignSelf="Auto"  HorizontalOptions="CenterAndExpand" CheckedChanged="QueryDelivery_CheckedChanged"  />
-                <Entry x:Name="queryDeliveryAddress" IsVisible="False" ReturnType="Next" FontSize="Medium" FlexLayout.AlignSelf="Stretch"  HorizontalOptions="CenterAndExpand"  TextColor="Black" />
-            </StackLayout>            
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*" />
+                    <ColumnDefinition Width="8*" />                    
+                </Grid.ColumnDefinitions>
+                <CheckBox x:Name="queryDelivery" Grid.Column="0" FlexLayout.AlignSelf="Auto"  HorizontalOptions="CenterAndExpand" CheckedChanged="QueryDelivery_CheckedChanged"  />
+                <Entry x:Name="queryDeliveryAddress" Grid.Column="1" IsVisible="False" ReturnType="Next" FontSize="Medium" FlexLayout.AlignSelf="Stretch"  HorizontalOptions="CenterAndExpand"  TextColor="Black" />
+            </Grid>            
             <Label TextColor="Black" FontAttributes="Bold" Text="When do you need these?" FlexLayout.AlignSelf="Center" FontSize="20"/>
             <StackLayout Orientation="Horizontal">
                 <DatePicker x:Name="queryDate" FlexLayout.AlignSelf="Stretch"  HorizontalOptions="CenterAndExpand"  />
