--- a/MobileApp/MobileApp/Views/CreateQuery/SelectQueryCategory.xaml
+++ b/MobileApp/MobileApp/Views/CreateQuery/SelectQueryCategory.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileApp.Views.CreateQuery.SelectQueryCategory"
-             Title="Select a Category"
+             Title="Select Query Category"
              NavigationPage.HasBackButton="True"
              >
     <ContentPage.Content>
