--- a/MobileApp/MobileApp/Views/ReceivedQueries/MakeOfferForReceivedQuery.xaml
+++ b/MobileApp/MobileApp/Views/ReceivedQueries/MakeOfferForReceivedQuery.xaml
@@ -1,73 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileApp.Views.ReceivedQueries.MakeOfferForReceivedQuery"
              Title="Make Offer for Query"
              NavigationPage.HasBackButton="True" 
              NavigationPage.HasNavigationBar="True"
             >
-    <TabbedPage.Children>
-        <ContentPage Title="TableView">
-            <ContentPage.Content>
-                <TableView Intent="Form">
-                    <TableView.Root>
-                        <TableRoot Title="Make Offer">
-                            <TableSection Title="Item Details">
-                                <ViewCell>
-                                    <StackLayout Orientation="Vertical" Padding="10">
-                                        <Label Text="{Binding ReceivedQuery.Name}" />
-                                        <Label Text="{Binding ReceivedQuery.Description}" />
-                                    </StackLayout>
-                                </ViewCell>
-                            </TableSection>
-                            <TableSection Title="Offer Description" >
-                                <EntryCell Keyboard="Text" Label="Offer Details:" Text="{Binding ReceivedQuery.Description, Mode=TwoWay}"></EntryCell>
-                            </TableSection>
-                            <TableSection Title="User Details">
-                                <TextCell Text="{Binding ReceivedQueryUser.DisplayName}" Detail="{Binding ReceivedQuery.DeliveryAddress}" Tapped="TextCell_Tapped"></TextCell>
-                            </TableSection>
-                            <TableSection Title="Offer" >
-                                <EntryCell Keyboard="Numeric" Label="Your Offer:" Text="{Binding Price, Mode=TwoWay}"></EntryCell>
-                            </TableSection>
-                        </TableRoot>
-                    </TableView.Root>
-                </TableView>
-            </ContentPage.Content>
 
-        </ContentPage>
+    <ContentPage.Content>
+        <TableView Intent="Form">
+            <TableView.Root>
+                <TableRoot Title="Make Offer">
+                    <TableSection Title="Item Details">
+                        <ViewCell>
+                            <StackLayout Orientation="Vertical" Padding="10">
+                                <Label Text="{Binding ReceivedQuery.Name}" />
+                                <Label Text="{Binding ReceivedQuery.Description}" />
+                            </StackLayout>
+                        </ViewCell>
+                    </TableSection>
+                    <TableSection Title="Offer Description" >
+                        <EntryCell Keyboard="Text" Label="Offer Details:" Text="{Binding ReceivedQuery.Description, Mode=TwoWay}"></EntryCell>
+                    </TableSection>
+                    <TableSection Title="User Details">
+                        <TextCell Text="{Binding ReceivedQueryUser.DisplayName}" Detail="{Binding ReceivedQuery.DeliveryAddress}" Tapped="TextCell_Tapped"></TextCell>
+                    </TableSection>
+                    <TableSection Title="Offer" >
+                        <EntryCell Keyboard="Numeric" Label="Your Offer:" Text="{Binding Price, Mode=TwoWay}"></EntryCell>
+                    </TableSection>
+                </TableRoot>
+            </TableView.Root>
+        </TableView>
+    </ContentPage.Content>
 
-        <ContentPage Title="GridView">
-            <Grid RowSpacing="10">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="10"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-                <Grid.Children>
-                    <Label Text="Make Offer" Font="Bold,Large"  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" />
-
-                    <Label Text="{Binding ReceivedQuery.Name}" TextColor="Color.Accent" Font="Bold,Medium" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" />
-                    <Label Text="{Binding ReceivedQuery.Description}" Font="Italic,Medium" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" />
-                    <Label Text="{Binding ReceivedQuery.DeliveryAddress, StringFormat='Needs to be delivered at {0} .'}" IsVisible="{Binding ReceivedQuery.NeedsDelivery}" Font="Italic,Medium" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" />
-
-                    <Label  Font="Bold,Large" Text="Your Offer:" Grid.Row="6" Grid.Column="0"/>
-                    <StackLayout Orientation="Horizontal" Grid.Row="6" Grid.Column="1" VerticalOptions="Center">
-                        <!--<Stepper Minimum="{Binding ReceivedQuery.Price, Mode=OneWay}" Increment="5" Maximum="500" Value="{Binding Price, Mode=TwoWay}"/>-->
-                        <Label Text="{Binding Price, StringFormat='{0:c}'}" Font="Medium"/>
-                    </StackLayout>
-
-                </Grid.Children>
-            </Grid>
-        </ContentPage>
-
-    </TabbedPage.Children>
-    <TabbedPage.ToolbarItems>
+    <ContentPage.ToolbarItems>
         <ToolbarItem Name="Bid" Text="Place Bid" Priority="1" Order="Primary" Command="{Binding MakeOfferCommand}" >
             <!--<ToolbarItem.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
@@ -75,5 +41,5 @@
                 </OnPlatform>
             </ToolbarItem.Icon>-->
         </ToolbarItem>
-    </TabbedPage.ToolbarItems>
-</TabbedPage>
+    </ContentPage.ToolbarItems>
+</ContentPage>
